--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@ title: Sukkari Dataset
 description: A dataset for sorting Sukkari Dates
 theme: just-the-docs
 
-url: https://alialbeladi.github.io/dawan
+url: https://Dawan-AI.github.io/SukkariDataset
 
 aux_links:
-  Template Repository: https://github.com/alialbeladi/dawan
+  Template Repository: https://github.com/Dawan-AI/SukkariDataset
 
 nav_sort: case_insensitive
